mediapipe_api/external/glog.h



MP_CAPI(void) glog_LOG_INFO__PKc(const char* str);

MP_CAPI(void) glog_LOG_WARNING__PKc(const char* str);

MP_CAPI(void) glog_LOG_ERROR__PKc(const char* str);

MP_CAPI(void) glog_LOG_FATAL__PKc(const char* str);


MP_CAPI(void) google_FlushLogFiles(google::LogSeverity severity);