mediapipe_api/external/absl/status.h

MP_CAPI(MpReturnCode) absl_Status__i_PKc(int code, const char* message, absl::Status** status_out);
MP_CAPI(void) absl_Status__delete(absl::Status* status);
MP_CAPI(MpReturnCode) absl_Status__ToString(absl::Status* status, const char** str_out);