mediapipe_api/external/protobuf.h



struct SerializedProto {
  const char* str;
  int length;

  ~SerializedProto() {
    delete[] str;
  }
};


struct SerializedProtoVector {
  SerializedProto** data;
  int size;

  ~SerializedProtoVector() {
    for (auto i = 0; i < size; ++i) {
      delete data[i];
    }

    delete[] data;
  }
};


typedef void LogHandler(int level, const char* filename, int line, const char* message);


MP_CAPI(MpReturnCode) google_protobuf__SetLogHandler__PF(LogHandler* handler);


MP_CAPI(void) mp_api_SerializedProto__delete(mp_api::SerializedProto* serialized_proto);

MP_CAPI(void) mp_api_SerializedProtoVector__delete(mp_api::SerializedProtoVector* serialized_proto_vector);